--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -18,12 +18,16 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-      - name: Test
+      - name: Setup dotnet
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: |
             9.0
-      - run: dotnet test
+      - name: Update NuGet.config
+        run: |
+          dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name github "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json"
+      - name: Test
+        run: dotnet test
       - name: Check Dockerfile Builds
         uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4
         with:
@@ -31,6 +35,7 @@ jobs:
           file: ./Dockerfile
           push: false
           tags: trade-imports-decision-comparer:latest
+          build-args: DEFRA_NUGET_PAT=${{ secrets.GITHUB_TOKEN }}
       - name: Check with Trivy
         run: docker run -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image trade-imports-decision-comparer:latest --ignore-unfixed
   sonarcloud-scan:
