--- a/src/Comparer/Comparer.csproj
+++ b/src/Comparer/Comparer.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Defra.TradeImportsDataApi.Api.Client" Version="0.1.0-pr-18.100" />
+    <PackageReference Include="Defra.TradeImportsDataApi.Api.Client" Version="0.1.0" />
     <PackageReference Include="Elastic.CommonSchema.Serilog" Version="8.12.3" />
     <PackageReference Include="Elastic.Serilog.Enrichers.Web" Version="8.12.3" />
     <PackageReference Include="Microsoft.AspNetCore.HeaderPropagation" Version="9.0.3" />
