Remove username env var

--- a/NuGet.config
+++ b/NuGet.config
@@ -7,7 +7,7 @@
     </packageSources>
     <packageSourceCredentials>
         <defra>
-            <add key="Username" value="%DEFRA_NUGET_USERNAME%" />
+            <add key="Username" value="USERNAME" />
             <add key="ClearTextPassword" value="%DEFRA_NUGET_PAT%" />
         </defra>
     </packageSourceCredentials>
