--- a/src/Comparer/appsettings.IntegrationTests.json
+++ b/src/Comparer/appsettings.IntegrationTests.json
@@ -1,2 +1,29 @@
 {
+  "Mongo": {
+    "DatabaseUri": "mongodb://127.0.0.1:27017",
+    "DatabaseName": "trade-imports-decision-comparer-integration-tests"
+  },
+  "Acl": {
+    "Clients": {
+      "IntegrationTest-Read": {
+        "Secret": "integration-test-read",
+        "Scopes": [
+          "read"
+        ]
+      },
+      "IntegrationTest-Write": {
+        "Secret": "integration-test-write",
+        "Scopes": [
+          "write"
+        ]
+      },
+      "IntegrationTest-ReadWrite": {
+        "Secret": "integration-test-readwrite",
+        "Scopes": [
+          "read",
+          "write"
+        ]
+      }
+    }
+  }
 }
