--- a/src/Comparer/appsettings.json
+++ b/src/Comparer/appsettings.json
@@ -15,11 +15,28 @@
     },
     "WriteTo": [
       {
-        "Name": "Console",
+        "Name": "Async",
         "Args": {
-          "formatter": "Elastic.CommonSchema.Serilog.EcsTextFormatter, Elastic.CommonSchema.Serilog"
+          "configure": [
+            {
+              "Name": "Console",
+              "Args": {
+                "formatter": "Elastic.CommonSchema.Serilog.EcsTextFormatter, Elastic.CommonSchema.Serilog"
+              }
+            }
+          ]
         }
       }
     ]
+  },
+  "Acl": {
+    "Clients": {
+      "BtmsGateway": {
+        "Scopes": [
+          "read",
+          "write"
+        ]
+      }
+    }
   }
 }
