--- a/.github/workflows/check-pull-request.yml
+++ b/.github/workflows/check-pull-request.yml
@@ -27,8 +27,17 @@ jobs:
         run: |
           dotnet nuget remove source defra
           dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name defra "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" --configfile NuGet.config
-      - name: Test
-        run: dotnet test
+      - name: Run unit tests
+        run: |
+          dotnet test --filter "Category!=IntegrationTest"
+      - name: Run integration tests
+        run: |
+          docker compose up -d
+          dotnet test --filter "Category=IntegrationTest"
+      - name: Docker Compose Logs
+        if: always()
+        run: |
+          docker compose logs
       - name: Check Dockerfile Builds
         uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4
         with:
