--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,13 @@ jobs:
         run: |
           dotnet nuget remove source defra
           dotnet nuget add source --username USERNAME --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text --name defra "https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json" --configfile NuGet.config
+      - name: Run unit tests
+        run: |
+          dotnet test --filter "Category!=IntegrationTest"
+      - name: Run integration tests
+        run: |
+          docker compose up -d
+          dotnet test --filter "Category=IntegrationTest"
       - name: Build and Publish
         uses: DEFRA/cdp-build-action/build@main
         with:
