--- a/compose.yml
+++ b/compose.yml
@@ -25,7 +25,7 @@ services:
       - mongodb-data:/data
     restart: always
 
-  data-api:
+  comparer:
     build:
       args:
         DEFRA_NUGET_PAT: ${DEFRA_NUGET_PAT}
