Add scaffolding for SQS finalisation consumer, tracing and associated test changes

--- a/src/Comparer/appsettings.IntegrationTests.json
+++ b/src/Comparer/appsettings.IntegrationTests.json
@@ -25,5 +25,11 @@
         ]
       }
     }
+  },
+  "DataApi": {
+    "BaseAddress": "http://localhost:9090"
+  },
+  "FinalisationsConsumer": {
+    "Enabled": false
   }
 }
