--- a/compose.yml
+++ b/compose.yml
@@ -32,6 +32,10 @@ services:
     depends_on:
       mongodb:
         condition: service_healthy
+      localstack:
+        condition: service_healthy
+      wiremock:
+        condition: service_started
     env_file:
       - 'compose/aws.env'
     environment:
@@ -39,6 +43,8 @@ services:
       ENVIRONMENT: local
       PORT: 8080
       Mongo__DatabaseUri: mongodb://mongodb:27017/?directConnection=true
+      DataApi__BaseAddress: "http://wiremock"
+      SQS_ENDPOINT: http://localstack:4566
     ports:
       - "8080:8080"
     healthcheck:
@@ -47,6 +53,35 @@ services:
       timeout: 5s
       retries: 10
       start_period: 5s
+  
+  localstack:
+    image: localstack/localstack
+    ports:
+      - '4566:4566' # LocalStack Gateway
+      - '4510-4559:4510-4559' # external services port range
+    env_file:
+      - 'compose/aws.env'
+    environment:
+      DEBUG: ${DEBUG:-1}
+      LS_LOG: info # Localstack DEBUG Level
+      SERVICES: sqs
+      LOCALSTACK_HOST: 127.0.0.1
+      TZ: Europe/London
+    volumes:
+      - '${TMPDIR:-/tmp}/localstack:/var/lib/localstack'
+      - ./compose/start-localstack.sh:/etc/localstack/init/ready.d/start-localstack.sh
+    healthcheck:
+      test: cat /tmp/ready
+      interval: 5s
+      start_period: 5s
+      retries: 10
+  
+  wiremock:
+    environment:
+      TZ: Europe/London
+    image: sheyenrath/wiremock.net:latest
+    ports:
+      - "9090:80"
 
 volumes:
   mongodb-data:
