--- a/src/Comparer/appsettings.json
+++ b/src/Comparer/appsettings.json
@@ -38,5 +38,11 @@
         ]
       }
     }
+  },
+  "DataApi": {
+    "Username": "TradeImportsDecisionComparer"
+  },
+  "FinalisationsConsumer": {
+    "QueueName": "trade_imports_data_upserted_decision_comparer"
   }
 }
