Add scaffolding for comparison

--- a/src/Comparer/appsettings.json
+++ b/src/Comparer/appsettings.json
@@ -36,6 +36,11 @@
           "read",
           "write"
         ]
+      },
+      "Developer": {
+        "Scopes": [
+          "read"
+        ]
       }
     }
   },
