Trigger comparison check when an MRN is finalised (#13)
* Add scaffolding for SQS finalisation consumer, tracing and associated test changes

* Add scaffolding for comparison

* Add correlation ID from incoming HTTP context

* Exclude from code coverage

* Add comparison endpoint tests

* Enhance integration tests

* Exclude from code coverage

--- a/src/Comparer/appsettings.json
+++ b/src/Comparer/appsettings.json
@@ -36,7 +36,18 @@
           "read",
           "write"
         ]
+      },
+      "Developer": {
+        "Scopes": [
+          "read"
+        ]
       }
     }
+  },
+  "DataApi": {
+    "Username": "TradeImportsDecisionComparer"
+  },
+  "FinalisationsConsumer": {
+    "QueueName": "trade_imports_data_upserted_decision_comparer"
   }
 }
