--- a/src/Comparer/Comparer.csproj
+++ b/src/Comparer/Comparer.csproj
@@ -15,7 +15,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Defra.TradeImportsDataApi.Api.Client" Version="0.8.0" />
+    <PackageReference Include="Defra.TradeImportsDataApi.Api.Client" Version="0.11.0" />
     <PackageReference Include="Elastic.CommonSchema.Serilog" Version="8.12.3" />
     <PackageReference Include="Elastic.Serilog.Enrichers.Web" Version="8.12.3" />
     <PackageReference Include="Microsoft.AspNetCore.HeaderPropagation" Version="9.0.4" />
@@ -30,5 +30,8 @@
     <PackageReference Include="MongoDB.Driver" Version="3.3.0" />
     <PackageReference Include="AspNetCore.HealthChecks.MongoDb" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
+    <PackageReference Include="SlimMessageBus" Version="3.0.0" />
+    <PackageReference Include="SlimMessageBus.Host.AmazonSQS" Version="3.1.1" />
+    <PackageReference Include="SlimMessageBus.Host.Serialization.SystemTextJson" Version="3.1.0" />
   </ItemGroup>
 </Project>
