--- a/src/Comparer/appsettings.json
+++ b/src/Comparer/appsettings.json
@@ -41,6 +41,11 @@
         "Scopes": [
           "read"
         ]
+      },
+      "AcceptanceTest": {
+        "Scopes": [
+          "read"
+        ]
       }
     }
   },
