--- a/src/Comparer/appsettings.json
+++ b/src/Comparer/appsettings.json
@@ -47,6 +47,12 @@
           "read"
         ]
       }
+    },
+    "MessageReplay": {
+      "Scopes": [
+        "read",
+        "write"
+      ]
     }
   },
   "FinalisationsConsumer": {
