CDMS-749: Add metrics support
This brings over sending metrics support for the messages that we consume.

--- a/src/Comparer/Properties/launchSettings.json
+++ b/src/Comparer/Properties/launchSettings.json
@@ -8,6 +8,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "AWS_ACCESS_KEY_ID": "test",
+        "AWS_EMF_ENVIRONMENT": "Local",
         "AWS_REGION": "eu-west-2",
         "AWS_SECRET_ACCESS_KEY": "test",
         "ENVIRONMENT": "local",
