--- a/src/Comparer/Comparer.csproj
+++ b/src/Comparer/Comparer.csproj
@@ -32,5 +32,6 @@
     <PackageReference Include="SlimMessageBus" Version="3.0.0" />
     <PackageReference Include="SlimMessageBus.Host.AmazonSQS" Version="3.2.0" />
     <PackageReference Include="SlimMessageBus.Host.Serialization.SystemTextJson" Version="3.2.0" />
+    <PackageReference Include="Amazon.CloudWatch.EMF" Version="2.2.0" />
   </ItemGroup>
 </Project>
