--- a/src/Comparer/appsettings.Development.json
+++ b/src/Comparer/appsettings.Development.json
@@ -1,4 +1,5 @@
 {
+  "AWS_EMF_ENABLED": false,
   "Mongo": {
     "DatabaseUri": "mongodb://127.0.0.1:27017/?directConnection=true",
     "DatabaseName": "trade-imports-decision-comparer"
