--- a/src/Comparer/appsettings.Development.json
+++ b/src/Comparer/appsettings.Development.json
@@ -21,5 +21,16 @@
         }
       }
     ]
+  },
+  "Acl": {
+    "Clients": {
+      "Developer": {
+        "Secret": "developer-pwd",
+        "Scopes": [
+          "read",
+          "write"
+        ]
+      }
+    }
   }
 }
