Add trial cutover behaviour that returns the BTMS decision should it be an exact match on all relevant fields

--- a/tests/Testing/Testing.csproj
+++ b/tests/Testing/Testing.csproj
@@ -28,4 +28,7 @@
   <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\Comparer\Comparer.csproj" />
+  </ItemGroup>
 </Project>
