CDMS-568: All environments are Trial Cutover mode of 2 at sampling % of 0 (CDP app config can overwrite these defaults)

--- a/src/Comparer/appsettings.json
+++ b/src/Comparer/appsettings.json
@@ -57,5 +57,10 @@
   },
   "FinalisationsConsumer": {
     "QueueName": "trade_imports_data_upserted_decision_comparer"
+  },
+  "Btms": {
+    "Comment": "All environments are Trial Cutover mode of 2 at sampling % of 0",
+    "OperatingMode": 2,
+    "DecisionSamplingPercentage": 0
   }
 }
